--- a/windbg/Makefile
+++ b/windbg/Makefile
@@ -1,17 +1,20 @@
 include ../Makefile
 
-DEPS1 := $(addprefix ../, $(addsuffix /windbg, ${DEPS}))
 PROD = mylisp.exe
 
-${PROD}: $(addsuffix .o, ${OBJS})
-	$(addprefix make -C , $(addsuffix ;, ${DEPS1}))
-	clang++ -o $@ $^ $(addprefix -L, ${DEPS1}) $(addprefix -l, ${LIBS}) -g -stdlib=libc++
+${PROD}: ${OBJS} libmylisp.so
+	clang++ -o $@ $^ -L . $(addprefix -l, ${LIBS}) -g -stdlib=libc++
 
-%.o: ../%.cc $(addprefix ../, $(addsuffix .hh, ${HHS}))
+%.o: ../%.cc $(addprefix ../, ${HHS})
 	clang++ -o $@ $< -I .. -I ../.. -std=c++2b -c -g -stdlib=libc++
+
+libmylisp.so:
+	make -C ../../mylisp/windbg
+	copy ..\..\mylisp\windbg\$@ $@
 
 clean:
 	echo > ${PROD}
-	del ${PROD} *.o
+	echo > libmylisp.so
+	del ${PROD} *.o libmylisp.so
 
 .PHONY: clean
